fixed overlap on firefox for heading not appearing on chrome

--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -13,11 +13,13 @@ h3 {
     flex-direction: column;
     align-items: center;
     height: auto;
-    padding: 120px 10px 0px 10px;
+    padding: 150px 10px 0px 10px;
     text-align: center;
 }
 .top-section {
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .intro-pic {
     margin-top: -180px;
